--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,6 @@ script:
  - mv ../cn1-unit-tests-master ../cn1-unit-tests
  - rm master.zip
  - cd ../cn1-unit-tests
- - ../codenameone-cli/node_modules/.bin/cn1 test -cn1Sources ../cn1 -s -e
+ - ../codenameone-cli/node_modules/.bin/cn1 test -cn1Sources ../cn1 -s -e -skipCompileCn1Sources
 after_success:
- - node .travis/trigger-build.js
+ - node ../cn1/.travis/trigger-build.js
