Moved triggers back to the end

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,6 @@ before_script:
 install:
   - gem install travis
 script:
- - cd ..
- - mkdir triggers
- - cd triggers
- - travis login --github-token=$GH_TOKEN --org
- - bash ../CodenameOne/.travis/trigger-builds.sh
  - wget https://github.com/codenameone/cn1-binaries/archive/master.zip
  - unzip master.zip -d ../
  - mv ../cn1-binaries-master ../cn1-binaries
@@ -47,3 +42,7 @@ script:
  - rm master.zip
  - cd ../cn1-unit-tests
  - ../codenameone-cli/node_modules/.bin/cn1 test -cn1Sources ../cn1 -s -e -skipCompileCn1Sources
+ - cd ..
+ - mkdir triggers
+ - cd triggers
+ - bash ../cn1/.travis/trigger-builds.sh
