--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ Ports/iOSPort/nbproject/private/private.properties
 /Ports/JavaSEWithSVGSupport/build/
 /Ports/JavaSEWithSVGSupport/dist/
 nightly_builds/.DS_Store
+/tests/iOSTests/build/
+node_modules
