--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ matrix:
   include:
     - language: java
       env: CN1_PLATFORM=javase CN1_RUNTESTS_JAVASE=1
-      jdk:
-        - oraclejdk8
+      jdk: oraclejdk8
       before_script:
         - "export DISPLAY=:99.0"
         - "sh -e /etc/init.d/xvfb start"
